# Hamilton-Cycle-Problem-with-MiniSat

./: .gitignore  CMakeLists.txt  README  Readme.html  Readme.md  cnf.out
ConsoleApplication1/: ConsoleApplication1.sln
ConsoleApplication1/ConsoleApplication1/: ConsoleApplication1.cpp  ConsoleApplication1.vcxproj
ConsoleApplication1/ConsoleApplication1/Debug/: CL.read.1.tlog  CL.write.1.tlog  ConsoleApplication1.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  vc110.idb
ConsoleApplication1/ipch/consoleapplication1-ee66ebbd/: consoleapplication1-3c45e224.ipch
Hamilton-Cycle/: Hamilton-Cycle.sln  cnf.in  test.in
Hamilton-Cycle/Hamilton-Cycle/: Edge.cpp  Edge.h  Hamilton-Cycle.cpp  Hamilton-Cycle.vcxproj  Hamilton-Cycle.vcxproj.filters  HandleFile.cpp  HandleFile.h  Node.cpp  Node.h  ReadMe.txt  cnf.in  res.out  stdafx.cpp
Hamilton-Cycle/Hamilton-Cycle/Debug/: CL.read.1.tlog  CL.write.1.tlog  Hamilton-Cycle.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  vc110.idb
Hamilton-Kreis-Linux/: Edge.h  Hamilton-Kreis-Linux.pro  HandleFile.cpp  HandleFile.h  Node.h  main.cpp  stdafx.h
Hamilton-Kreis-Linux/graphs/: nstriangle.col  triangle.col
build-Hamilton-Kreis-Linux-Desktop-Debug/: Hamilton-Kreis-Linux  Makefile  cnf.in  cnf.in~
graphs/: hc-14f.col  nstriangle.col  test.col
src/: Hamilton-Kreis-Linux.pro  HandleFile.cpp  HandleFile.h  main.cpp
